--- a/Index.css
+++ b/Index.css
@@ -262,12 +262,52 @@ background-attachment: fixed;
 	transform: scale(1.1);
 }
 
+.slentA h3 {
+	color: rgb(231, 231, 231);
+	letter-spacing: 5px;
+	font-size: 30px;
+	padding-left: 200px;
+	padding-top: 140px;
+}
+
+.slentA p {
+	color: rgb(201, 201, 201);
+	letter-spacing: normal;
+	font-size: 25px;
+	padding-left: 550px;
+	padding-top: 50px;
+}
+
+.slentA img {
+	position: absolute;
+    left: 200px;
+    transform: translateY(-60%);
+    height: 300px; 
+}
+
+.slentA button {
+	position: absolute;
+	background-color: black;
+	color: white;
+	box-shadow: 0 0 2px greenyellow, 0 0 4px greenyellow, 0 0 8px greenyellow;
+	left: 550px;
+	border: none;
+	padding: 15px 40px;
+	border-radius: 15px;
+	cursor: pointer;
+}
+
+.slentA button:hover {
+	background-color: rgb(0, 96, 221);
+	transform: scale(1.1);
+}
+
 .astro h3 {
 	color: rgb(231, 231, 231);
 	letter-spacing: 5px;
 	font-size: 30px;
 	padding-left: 200px;
-	padding-top: 150px;
+	padding-top: 180px;
 }
 
 .astro p {
