--- a/Astros.css
+++ b/Astros.css
@@ -123,6 +123,7 @@ background-attachment: fixed;
   top: 45%;
   transform: translateY(-50%);
   height: 400px; 
+  border-radius: 50px;
 }
 
 .conceptualización h2 {
@@ -273,6 +274,7 @@ background-attachment: fixed;
   padding: 10px;
   border: none;
   border-radius: 5px;
+  background-color: black;
 }
 
 .contacto button {
@@ -300,6 +302,7 @@ background-attachment: fixed;
 .pie p {
 	text-align: center;
 	padding-top: 40px;
+	color: white;
 }
 
 .pie a {
