--- a/Index.css
+++ b/Index.css
@@ -96,6 +96,10 @@ background-size: cover;
 background-attachment: fixed;
 }
 
+a {
+	color: white;
+}
+
 .bienvenida h2 {
 	color: rgb(231, 231, 231);
 	text-shadow: 0 0 5px red, 0 0 10px red, 0 0 20px red;
@@ -131,6 +135,7 @@ background-attachment: fixed;
   top: 45%;
   transform: translateY(-50%);
   height: 400px; 
+  border-radius: 50px;
 }
 
 .proyectos h2 {
@@ -203,6 +208,7 @@ background-attachment: fixed;
     left: 200px;
     transform: translateY(-90%);
     height: 300px; 
+	border-radius: 50px;
 }
 
 .persona1 button {
@@ -243,6 +249,7 @@ background-attachment: fixed;
     left: 200px;
     transform: translateY(-80%);
     height: 300px; 
+	border-radius: 50px;
 }
 
 .slentT button {
@@ -283,6 +290,7 @@ background-attachment: fixed;
     left: 200px;
     transform: translateY(-60%);
     height: 300px; 
+	border-radius: 50px;
 }
 
 .slentA button {
@@ -323,6 +331,7 @@ background-attachment: fixed;
     left: 200px;
     transform: translateY(-75%);
     height: 300px; 
+	border-radius: 50px;
 }
 
 .astro button {
@@ -364,6 +373,7 @@ background-attachment: fixed;
   padding: 10px;
   border: none;
   border-radius: 5px;
+  background-color: black;
 }
 
 .contacto button {
@@ -391,6 +401,7 @@ background-attachment: fixed;
 .pie p {
 	text-align: center;
 	padding-top: 40px;
+	color: white;
 }
 
 .pie a {
