--- a/RebornTeam.css
+++ b/RebornTeam.css
@@ -123,6 +123,7 @@ background-attachment: fixed;
   top: 45%;
   transform: translateY(-50%);
   height: 400px; 
+  border-radius: 50px;
 }
 
 .origen h2 {
@@ -181,6 +182,8 @@ background-attachment: fixed;
   transform: none;
   z-index: 1;
   height: 600px; 
+  padding-top: 30px;
+  border-radius: 50px;
 }
 
 .proyectos div {
@@ -237,6 +240,7 @@ background-attachment: fixed;
   padding: 10px;
   border: none;
   border-radius: 5px;
+  background-color: black;
 }
 
 .contacto button {
@@ -264,6 +268,7 @@ background-attachment: fixed;
 .pie p {
 	text-align: center;
 	padding-top: 40px;
+	color: white;
 }
 
 .pie a {
